<resources>
    <string name="cancer_type">Cancer Type</string>
    <string name="sponsor_date">Sponsor Date</string>
    <string name="progress_dialog_title">Information</string>
    <string name="progress_dialog_message">Loading!! Please wait...</string>
    <string name="app_name">Support Health</string>
    <string name="doctor_name">Name</string>
    <string name="salutation">Salutation</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="vital_stat">Vital Statistics</string>
    <string name="notes">Notes</string>
    <string name="now_password">Password</string>
    <string name="check_password">Edit Password</string>
    <string name="description">Description</string>
    <string name="isto">:</string>
    <string name="enter_email">Enter Your Email-id</string>
    <string name="change_password">Change Password</string>
    <string name="profile_updated">Your Profile is Updated</string>
    <string name="middlename">Middle Name</string>
    <string name="welcome">Welcome</string>
    <string name="respiration">Respiration Rate</string>
    <string name="bpDia">Blood Pressue(Dia)</string>
    <string name="bpSys">Blood Pressue(Sys)</string>
    <string name="inch">inch</string>
    <string name="lbs">lbs</string>
    <string name="indication">Indication</string>
    <string name="profileInfo">Profile Information</string>
    <string name="cc">CC</string>
    <string name="ccwithsemi">Separate email-id with ;</string>
    <string name="bpm">bpm</string>
    <string name="reqSpon">Request For Sponsor</string>
    <string name="add_new_spon">Add New Sponsor</string>
    <string name="allergies">Allergies</string>
    <string name="allergy_type">Allergy Type</string>
    <string name="cause">Cause</string>
    <string name="result">Result</string>
    <string name="enter_doctor">Enter Health care Provider Name</string>
    <string name="name_doctor">Health care Provider Name</string>
    <string name="email_doctor">Health care Provider Email</string>
    <string name="email_sponsor">Sponsor Email</string>
    <string name="email_patient">Patient Email</string>
    <string name="phone_doctor">Provider Phone</string>
    <string name="weblink">Web Link</string>
    <string name="symptom_tracker">Symptom Tracker</string>
    <string name="severity_level">Severity</string>
    <string name="edit">Edit</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="bloodPressure">Blood Pressure</string>
    <string name="bmi">BMI</string>
    <string name="pulse">Pulse</string>
    <string name="diaFast">Diabetes Fast</string>
    <string name="diaPost">Diabetes Post</string>
    <string name="diaRbs">Diabetes RBS</string>
    <string name="visit_date">Visit Date</string>
    <string name="share_health_record">Share EHR</string>
    <string name="up_event">Upcoming Events</string>
    <string name="past_event">Past Events</string>
    <string name="up_app">Upcoming</string>
    <string name="past_app">Past</string>
    <string name="send_message">Compose</string>
    <string name="outbox">Outbox</string>
    <string name="send">Send</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="request_for_sponsorship">Enter Your Request For Sponsorship Here</string>
    <string name="message">Message:</string>
    <string name="mess">Message</string>
    <string name="dialog_button_Ok">OK</string>
    <string name="dialog_button_Confirm">Confirm</string>
    <string name="dialog_button_Cancel">Cancel</string>
    <string name="dialog_title_information">Information</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="server_error">Server returned an error</string>
    <string name="network_err_msg">Network error</string>
    <string name="subject">Subject</string>
    <string name="content">Content</string>
    <string name="subject:">Subject:</string>
    <string name="send_requests">Send Requests</string>
    <string name="send_request">Send Request</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="to:">To:</string>
    <string name="health_care">HealthCare</string>
    <string name="health">Health care</string>
    <string name="healthcareapp">HealthCareApp</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="invalid_password">Invalid password, length must be more than 6 letters and less than 30 letters</string>
    <string name="user_already_exist">User already exist</string>
    <string name="fill_all_details">Please fill all details for Registration</string>
    <string name="password_cpassowrd_should_be_same">Password and Confirm Password should be same</string>
    <string name="enter_all_details">Enter all details!</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="invalid_phone">Invalid phone number, should contain 10 digits</string>
    <string name="under_construction">Under Construction!</string>
    <string name="hello">Hello</string>
    <string name="event_name">Event Name</string>
    <string name="contact">Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="event_date">Date</string>
    <string name="location">Location</string>
    <string name="cancel">Cancel</string>
    <string name="todays_number_of_appointment">Upcoming No. of Appointments</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="patient_name">Patient Name</string>
    <string name="time">Time</string>
    <string name="health_record">Health Record</string>
    <string name="view">View</string>
    <string name="name:">Name:</string>
    <string name="unread_msg">Unread Messages</string>
    <string name="message_list">Inbox</string>
    <string name="new_message">New Message</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="check">Check</string>
    <string name="date">Date</string>
    <string name="complaint">Complaint</string>
    <string name="status">Status</string>
    <string name="medicine">Medicine </string>
    <string name="diagnosis">Diagnosis</string>
    <string name="startdate">Start Date</string>
    <string name="enddate">End Date</string>
    <string name="quantity">Qty</string>
    <string name="reason">Reason</string>
    <string name="list_of_patient">List of Patients</string>
    <string name="add_new_patient">Add new Patient</string>
    <string name="list_of_doctors">List of Providers</string>
    <string name="add_doctor">Add Provider</string>
    <string name="note">Note</string>
    <string name="view_ehr">View EHR</string>
    <string name="share_ehr">Share EHR</string>
    <string name="share">Share</string>
    <string name="register">Registration!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_here">Login Here</string>
    <string name="username">Username</string>
    <string name="push">Push</string>
    <string name="health_partners">Health Partners</string>
    <string name="request_for_sponsor">Request For Sponsor</string>
    <string name="latest_on_cancer">Latest On Cancer</string>
    <string name="forum">Forum</string>
    <string name="patient_registration">Patient Registration</string>
    <string name="name">Name</string>
    <string name="specilization">Specialization</string>
    <string name="dob">DOB</string>
    <string name="mmddyyyy">mm/dd/yyyy</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="ph_no">Ph. Number</string>
    <string name="email">E-Mail</string>
    <string name="events">Events</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New Password</string>
    <string name="new_check_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="title">Title</string>
    <string name="specialization">Specialization</string>
    <string name="doctor_registration">Health care Provider Registration</string>
    <string name="ehrpassword">EHR Password</string>
    <string name="ehrusername">EHR Username</string>
    <string name="skip">Skip</string>
    <string name="diagnosed_cancer">Have you been diagnosed with cancer?</string>
    <string name="cancer_checkup">Have you undergone a cancer checkup?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="visit_hospitals">visit any of the below hospitals</string>
    <string name="age">Age</string>
    <string name="sex">Sex</string>
    <string name="profile">Profile</string>
    <string name="my_notes">My Notes</string>
    <string name="add_new_note">Add New Note</string>
    <string name="list_of_hospitals">List of Hospitals</string>
    <string name="search_hospital">Search Hospital</string>
    <string name="current_medication">Current Medication</string>
    <string name="previous_medication">Past Medication</string>
    <string name="medication">Medication</string>
    <string name="note_added">Your note has been added successfully</string>
    <string name="note_deleted">Your note has been deleted successfully</string>
    <string name="notedetail">Note Detail</string>
    <string name="appointments">Appointments</string>
    <string name="community">Community</string>
    <string name="field_should_not_empty">UserName and Password should not be empty</string>
    <string name="set_reminder">Set Reminders</string>
    <string name="mgpower">Mg</string>
    <string name="inbox">Inbox</string>
    <string name="msg_detail">Message Detail</string>
    <string name="reply">Reply</string>
    <string name="from">From:</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="stop">Stop</string>
    <string name="alarm">HealthCare Alarm</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="remove_alarm">Remove Alarm</string>
    <string name="every_week_repeat">Every week repeat</string>
    <string name="alarm_time">Alarm Time:</string>
    <string name="set_time">Set Time</string>
    <string name="alarm_repeat">Alarm repeat</string>
    <string name="m">M</string>
    <string name="t">T</string>
    <string name="w">W</string>
    <string name="f">F</string>
    <string name="s">S</string>
    <string name="select_a_tone">Select a Tone</string>
    <string name="address">Address:</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="contact:">Contact:</string>
    <string name="diagnosis_history">Diagnostic History</string>
    <string name="power">Power:</string>
    <string name="cancer_info">Cancer Information</string>
    <string name="login_as_patient">Patient Login</string>
    <string name="login_as_doctor">Provider Login</string>
    <string name="login_as_sponor">Sponsor Login</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="submit">Submit</string>
    <string name="select">Select</string>
    <string name="select_doctor">Select Provider</string>
    <string name="select_patient">Select Patient</string>
    <string name="create_alarm">Create New Alarm</string>
    <string name="note_title">Note Title</string>
</resources>