<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aaa"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="80dp" >

            <TextView
                android:id="@+id/provider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/health"
                android:textSize="30sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_here"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/etUserName"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/usernameicon"
                android:ems="10"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress" >

                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:drawableLeft="@drawable/passwordicon"
                android:ems="10"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/bLogin"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:background="@drawable/btn_blue_clickable"
                android:text="@string/login"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp" >

                <Button
                    android:id="@+id/bForgotPassword"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_blue_clickable"
                    android:text="@string/forgot_password"
                    android:textSize="14sp"
                     />

                <Button
                    android:id="@+id/bRegister"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/btn_blue_clickable"
                    android:text="@string/register"
                    android:textSize="14sp"
                     />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>