<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="40dip"
    android:baselineAligned="false"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="2dp" >

        <TextView
            android:id="@+id/visitdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/skyblue_border"
            android:text="@string/date"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="2dp" >

        <TextView
            android:id="@+id/complaint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:background="@drawable/skyblue_border"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="2dp" >

        <TextView
            android:id="@+id/ehr"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/skyblue_border"
            android:text="@string/doctor_name"
            android:textAlignment="center"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>