<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/healderlayout"
        style="@style/fillWidth"
        android:layout_height="40dip"
        android:background="@drawable/header" >

        <TextView
            android:id="@+id/heading1"
            style="@style/Headertitle"
            android:layout_centerInParent="true"
            android:text="@string/diagnosis_history" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_border"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:background="@drawable/skyblue_border"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/patient_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=":"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/patientName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:text="@string/appointments"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/diagnosislist"
        style="@style/listStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FCFCFC" />

</LinearLayout>